--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+margin: 0px;
+  padding: 0px;
+  height: 100vh;
+}
 .input{
 /*width: 100%;*/
 /*display: block;*/
@@ -6,4 +11,3 @@
 text-align: center;
 margin-top: 20px;
 }
-
