--- a/style.css
+++ b/style.css
@@ -9,5 +9,6 @@ margin: 0px;
 /*margin-left: auto;*/
 /*content: center;*/
 text-align: center;
-margin-top: 20px;
+padding-top: 20px;
+background-color: black;
 }
